# Game-Engine

./: .gitignore  Animator.cpp  Animator.h  AnimatorInfo.cpp  AnimatorInfo.h  Background.cpp  Background.h  BackgroundLayer.cpp  BackgroundLayer.h  BaseButton.cpp  BaseButton.h  Block.cpp  Block.h  Bug.cpp  Bug.h  CMakeLists.txt  CMakeLists_Game_Template.txt  Camera.cpp  Camera.h  Checkpoint.cpp  Checkpoint.h  Collectible.cpp  Collectible.h  Collider.cpp  Collider.h  CutsceneCommands.cpp  CutsceneCommands.h  CutsceneManager.cpp  CutsceneManager.h  CutsceneTrigger.cpp  CutsceneTrigger.h  DebugScreen.cpp  DebugScreen.h  Decoration.cpp  Decoration.h  Dialog.cpp  Dialog.h  Door.cpp  Door.h  EMSCRIPTEN_BUILD.txt  (+121 more)
Shaders/: color-glow.frag  color-hue-shift.frag  default.frag  fade-in-out.frag  fade-in-out.vert  glow.frag  gui.frag  gui.vert  multiply.frag  multiply.vert  noalpha.frag  shader0.frag  shader1.frag  shader1.vert  special.frag
src/: main.cpp
src/ENGINE/: Animator.cpp  Animator.h  AnimatorInfo.cpp  AnimatorInfo.h  Background.cpp  Background.h  BackgroundLayer.cpp  BackgroundLayer.h  BaseButton.cpp  BaseButton.h  Camera.cpp  Camera.h  CameraBounds.cpp  CameraBounds.h  Collider.cpp  Collider.h  Component.h  CutsceneCommands.cpp  CutsceneCommands.h  CutsceneFunctions.cpp  CutsceneFunctions.h  CutsceneHelper.cpp  CutsceneHelper.h  CutsceneManager.cpp  CutsceneManager.h  CutsceneTrigger.cpp  CutsceneTrigger.h  DebugScreen.cpp  DebugScreen.h  Dialog.cpp  Dialog.h  DirectionalLight.cpp  DirectionalLight.h  Editor.cpp  Editor.h  EditorButton.cpp  EditorButton.h  EditorHelper.cpp  EditorHelper.h  Entity.cpp  (+95 more)
src/WDK/: Block.cpp  Block.h  Checkpoint.cpp  Checkpoint.h  Collectible.cpp  Collectible.h  Decoration.cpp  Decoration.h  Door.cpp  Door.h  Enemy.cpp  Enemy.h  HealthComponent.cpp  HealthComponent.h  Ladder.cpp  Ladder.h  Missile.cpp  Missile.h  MyEditorHelper.cpp  MyEditorHelper.h  MyEntity.cpp  MyEntity.h  MyEntityFactory.cpp  MyEntityFactory.h  MyFileManager.cpp  MyFileManager.h  MyGUI.cpp  MyGUI.h  NPC.cpp  NPC.h  Spell.h  (+14 more)
utils/: animEditor.py  bgEditor.py  configEditor.py  guiEditor.py  launch.bat  launcher.py  listEditor.py  menuEditor.py
